--- a/STABEL/Assembly-CSharp.csproj
+++ b/STABEL/Assembly-CSharp.csproj
@@ -61,7 +61,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemy.cs" />
+    <Compile Include="Assets\Scripts\Manager.cs" />
+    <Compile Include="Assets\Scripts\PlayerBehavior.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/narsi/Documents/GitHub/STABEL/STABEL/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
